[package]
name = "rig-coding-tools"
version = "0.1.0"
edition = "2021"
description = "Basic coding tools for rig based LLM agents"
repository = "https://github.com/Sewer56/rig-coding-tools"
license = "MIT"
include = ["src/**/*"]
readme = "README.MD"

[dependencies]
rig-core = { version = "0.27", default-features = false, features = ["reqwest-rustls"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
anyhow = "1.0"


